--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "symfony/twig-bundle": "7.0.*",
         "symfony/yaml": "7.0.*",
         "twig/extra-bundle": "^3.10",
+        "twig/string-extra": "^3.10",
         "vich/uploader-bundle": "^2.3"
     },
     "config": {
