--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,5 +1,8 @@
 twig:
     file_name_pattern: '*.twig'
+    form_themes: ["bootstrap_5_layout.html.twig"]
+    globals:
+        categoryRepository: '@App\Repository\CategoryRepository'
 
 when@test:
     twig:
