--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "symfony/runtime": "7.0.*",
         "symfony/security-bundle": "7.0.*",
         "symfony/twig-bundle": "7.0.*",
+        "symfony/validator": "7.0.*",
         "symfony/yaml": "7.0.*",
         "twig/extra-bundle": "^3.10",
         "twig/string-extra": "^3.10",
