--- a/.env
+++ b/.env
@@ -29,3 +29,7 @@ APP_SECRET=57dd58eff8ecbca76a3aa43602411f58
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 DATABASE_URL="mysql://root:@127.0.0.1:3306/symprinting?serverVersion=8.0.32&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://b1181c7552631b:2b18522546fff7@sandbox.smtp.mailtrap.io:2525
+###< symfony/mailer ###
