--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/dotenv": "7.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.0.*",
+        "symfony/mailer": "7.0.*",
         "symfony/monolog-bundle": "^3.10",
         "symfony/rate-limiter": "7.0.*",
         "symfony/runtime": "7.0.*",
